Wrap topic input in scrollpane Fixes #22

--- a/src/main/webapp/resources/css/directory.css
+++ b/src/main/webapp/resources/css/directory.css
@@ -49,3 +49,7 @@ td:nth-child(5) {
     font-size: 24px;
     line-height: 20px;
 }
+.topic-scroll-wrap {
+    overflow: auto;
+    height: 60px;
+}
